--- a/cadastro/index.html
+++ b/cadastro/index.html
@@ -52,7 +52,9 @@
         <label>Senha*</label>
         <input type="password"/>
 
-        <button class="botao_conta">CRIAR CONTA</button>
+        <div class="botao_contorno">
+        <a href="../index.html" class="botao">CRIAR CONTA</a>
+        </div>
 
     </form>
 
