--- a/login/index.html
+++ b/login/index.html
@@ -21,17 +21,7 @@
     <header>
         <h1 class="logo">Kallos</h1>
 
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../LOGIN/index.html">Login/Cadastro</a></li>
-                <li><a href="../CULTURA/index.html">Cultura</a></li>
-                <li><a href="../TURISMO/index.html">Pontos Turísticos</a></li>
-                <li><a href="../CULINARIA/index.html">Culinária</a></li>
-                <li><a href="../ECONOMIA/index.html">Economia</a></li>
-                <li><a href="../QUIZ/index.html">Quiz</a></li>
-            </ul>
-        </nav>
+        
     </header>
 
     <main>
@@ -47,7 +37,7 @@
 
                 <a href="#" class="esqueceu">Esqueceu a senha?</a>
 
-                <button class="botao_conectar">CONECTE-SE</button>
+                <a href="../index.html" class="botao">CONETE-SE</a>
             </form>
         </div>
          <div class="cadastro">
