--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./LOGIN/index.html">Login/Cadastro</a></li>
-                <li><a href="./CULTURA/index.html">Cultura</a></li>
-                <li><a href="./TURISMO/index.html">Pontos Turísticos</a></li>
-                <li><a href="./CULINARIA/index.html">Culinária</a></li>
-                <li><a href="./ECONOMIA/index.html">Economia</a></li>
-                <li><a href="./QUIZ/index.html">Quiz</a></li>
+                <li><a href="./login/index.html">Login/Cadastro</a></li>
+                <li><a href="./cultura/index.html">Cultura</a></li>
+                <li><a href="./turismo/index.html">Pontos Turísticos</a></li>
+                <li><a href="./culinaria/index.html">Culinária</a></li>
+                <li><a href="./economia/index.html">Economia</a></li>
+                <li><a href="./quiz/index.html">Quiz</a></li>
             </ul>
         </nav>
     </header>
