--- a/login/index.html
+++ b/login/index.html
@@ -41,7 +41,7 @@
             </form>
         </div>
          <div class="cadastro">
-            <p>Ainda não tem uma conta? <a href="../CADASTRO/index.html">CADASTRE-SE</a></p>
+            <p>Ainda não tem uma conta? <a href="../cadastro/index.html">CADASTRE-SE</a></p>
             <ul>
                 <li>Adiquira mais conhecimento sobre este lindo país!</li>
                 <li>Você pode viajar pela Grécia sem sair de casa!</li>
