--- a/quiz/index.html
+++ b/quiz/index.html
@@ -85,7 +85,7 @@
       <p> d) Tecnologia militar </p>
     </div>
       
-    <a href="../RESPOSTAS/index.html" class="respostas">Respostas</a>
+    <a href="../respostas/index.html" class="respostas">Respostas</a>
 
     </main>
 </body>
